--- a/css/media-queries.css
+++ b/css/media-queries.css
@@ -1,15 +1,17 @@
-/* *****SCREEN SMALL < 576px***** */
+/* *****SCREEN SMALL dopo 576px***** */
 
 @media screen and (min-width: 576px) {
-    
+    .left_sidebar {
+        width: 260px;
+    }
 }
 
-/* *****SCREEN MEDIUM < 768px***** */
+/* *****SCREEN MEDIUM dopo 768px***** */
 @media screen and (min-width: 768px) {
     
 }
 
-/* *****SCREEN LARGE < 992Px***** */
+/* *****SCREEN LARGE dopo 992Px***** */
 @media screen and (min-width: 992px) {
     
 }
