--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,21 @@ body {
     font-family: 'Montserrat', sans-serif;
 }
 
+h1 {
+    font-size: 18px;
+    color: white;
+}
+
+h2 {
+    font-size: 15px;
+    color: white;
+}
+
+h3 {
+    font-size: 12px;
+    color: #878787;
+}
+
 a {
     text-decoration: none;
     font-size: 10px;
@@ -41,7 +56,7 @@ ul li {
 
 .left_sidebar_top_icon {
     margin: auto;
-    width: 15px;
+    width: 20px;
     padding-bottom: 5px;
 }
 
@@ -52,17 +67,18 @@ ul li {
 
 .left_sidebar_bottom_icon {
     margin: auto;
-    width: 15px;
+    width: 20px;
 }
 
 /* **CONTENUTO** */
 .container {
     flex-grow: 1;
+    overflow-y: auto;
 }
 
 /* bottone upgrade */
 .container_upgrade {
-    padding: 10px 5px 12px;
+    padding: 12px 5px 14px;
     text-align: right;
 }
 
@@ -75,7 +91,7 @@ ul li {
 
 /* navbar centrale */
 .container_navbar {
-    padding: 15px 5px 0;
+    padding: 15px 13px 0;
 }
 
 .container_navbar_box {
@@ -89,6 +105,45 @@ ul li {
     color: #878787;
 }
 
+/* sezione titolo con box */
+.container_content {
+    padding: 22px 13px 0;
+}
+
+.container_content_box {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 10px;
+    padding-top: 20px;
+}
+
+.container_content_card {
+    width: calc(100% / 2 - 5px);
+    cursor: pointer;
+}
+
+.container_content_card_img {
+    width: 100%;
+    height: auto;
+    max-width: 300px;
+    margin: auto;
+}
+
+.container_content_card_img img {
+    width: 100%;
+}
+
+.container_content_card_text {
+    text-align: center;
+    width: 100%;
+    max-width: 300px;
+    margin: auto;
+}
+
+.container_content_card_text h2 {
+    padding: 10px 0 7px;
+}
+
 /* ***SEZIONE CONTROLLI BASSI*** */
 
 .bottom_playbar {
@@ -99,9 +154,5 @@ ul li {
 /* *****CLASSI UTILITIES***** */
 
 .i_small {
-    width: 10px;
-}
-
-.strong {
-    font-weight: bold;
+    width: 12px;
 }
