add animation in volume and time bar

--- a/css/media-queries.css
+++ b/css/media-queries.css
@@ -62,6 +62,10 @@
         height: auto;
     }
 
+    .botom_playbar_middle_timebar_sec {
+        font-size: 12px;
+    }
+
     .h2_small {
         font-size: 12px;
     }
